--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     "@tanstack/react-router-ssr-query": "^1.131.7",
     "@tanstack/react-start": "^1.132.0",
     "@tanstack/router-plugin": "^1.132.0",
+    "@tanstack/start": "^1.120.20",
+    "better-auth": "^1.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-kit": "^0.31.8",
     "drizzle-orm": "^0.45.0",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.561.0",
     "pg": "^8.16.3",
     "react": "^19.2.0",
@@ -41,6 +44,7 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.6",
     "tw-animate-css": "^1.3.6",
+    "vinxi": "^0.5.10",
     "vite-tsconfig-paths": "^6.0.2"
   },
   "devDependencies": {
