--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.561.0",
+    "nitro": "^3.0.1-alpha.1",
     "pg": "^8.16.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
