--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@cloudflare/vite-plugin": "^1.13.8",
     "@neondatabase/serverless": "^1.0.0",
     "@neondatabase/vite-plugin-postgres": "^0.5.0",
+    "@radix-ui/react-slot": "^1.2.4",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.7.0",
     "@tanstack/react-query": "^5.66.5",
