--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@cloudflare/vite-plugin": "^1.13.8",
+    "@google-cloud/storage": "^7.18.0",
     "@neondatabase/serverless": "^1.0.0",
     "@neondatabase/vite-plugin-postgres": "^0.5.0",
     "@radix-ui/react-slot": "^1.2.4",
@@ -44,6 +45,7 @@
     "pg": "^8.16.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "sharp": "^0.34.5",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.6",
