refactor: auth pages

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ count.txt
 .output
 .vinxi
 todos.json
+client_secret_259799500977-ttom9ovikmfjs3n5ee73sjs4tj6ici5e.apps.googleusercontent.com.json
