--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@neondatabase/vite-plugin-postgres": "^0.5.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-toggle": "^1.1.10",
     "@react-three/drei": "^10.7.7",
