--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "tw-animate-css": "^1.3.6",
     "vinxi": "^0.5.10",
     "vite-tsconfig-paths": "^6.0.2",
+    "zod": "^4.3.5",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
